2015-08-25  Araki Ken  <arakiken@users.sf.net>

	* configure.in, gtk/Makefile.in:
	  - 'make VTE_ABI=(|2.90|2.91)' can change VTE ABI version to be built.
	  - libvte-2.91.so.9 -> libvte-2.91.so.0

	* vte.c: Failure of ioctl(slave, TIOCSCTTY) in vte_pty_child_setup() is fixed.

	* MLActivity.java, android/jni/x_event_source.c: Ambiguous method name is fixed.

2015-08-17  Araki Ken  <arakiken@users.sf.net>

	* mc_font.c: "Font width" buttons are added.

2015-08-15  Araki Ken  <arakiken@users.sf.net>

	* mkf_ucs_property.table: Updated to Unicode 8.0.0 (UnicodeData.txt and
	  EastAsianWidth.txt)

	* xlib/x_font.c: Fix typo.

2015-08-15  Araki Ken  <arakiken@users.sf.net>

	* win32/x_window.c: Improvement for an input method window.

	* x_screen.c, mlconfig/main.c, mc_flags.[ch]:
	  It is enabled to change the value of "use_extended_scroll_shortcut" option
	  dynamically, and a checkbox of it is added to mlconfig.

	* im_wnn.c: Ctrl+h works.

	* x_screen_manager.c: X11 forwarding of an opened ssh session isn't disabled.

2015-08-14  Araki Ken  <arakiken@users.sf.net>

	* */x_window.c, x_layout.[ch], x_main_config.[ch], x_screen.[ch],
	  x_screen_manager.c:
	  layout_inner_border/--lborder option which enables you to specify the number
	  of inner border pixels of a layout manager is added.

2015-08-02  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c:
	  KBD_INUPT_NAME => KBD_INPUT_NUM
	  MOUSE_INUPT_NAME => MOUSE_INPUT_NUM

2015-08-02  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c: Keyboard or mouse input device name is
	  configurable by "KBD_INPUT_NAME" or "MOUSE_INPUT_NAME" environmental
	  variable.

2015-08-01  Araki Ken  <arakiken@users.sf.net>

	* x_window_cairo.c, x_font_ft.c, x_font.h:
	  - user_data_t is removed.
	  - compl_fonts and pattern are added to x_font_t.
	  - compl_fonts and pattern are created only if charset isn't US_ASCII,
	    ISO8859_1_R or ISCII.

2015-07-25  Araki Ken  <arakiken@users.sf.net>
